fix bug: table will not be focused on clicking scrollbar; item will not be selected by :move keybind under no item selected.

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 body {
 	margin: 0;
 	height: 100%;
-  user-select: none;
-  -webkit-user-select: none;
+  /*user-select: none;*/
+  /*-webkit-user-select: none;*/
 }
 
 /* view containers */
